# git-metadata-extractor

./: .env.dist  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  genai_model.py  github_request.py  gpt_model.py  llm_request.py  main.py  output.py  output_example.txt  prompts.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: publish_image_in_GHCR.yaml
core/: genai_model.py  github_request.py  gpt_model.py  prompts.py  pydantic.py
docs/: docker-cleanup-strategy.md
examples/: field_guide_tag_retreival.py  langchain_test.py
files/: output_file.json  schema_context.txt
src/: api.py  main.py
src/core/: genai_model.py  gimie_methods.py  models.py  orgs_parser.py  prompts.py  pydantic.py  users_parser.py  verification.py
src/files/: json-ld-context.json  output_file.json
src/test/: test_conversion.py
src/utils/: logging_config.py  utils.py
utils/: output.py  prompts.py  utils.py  verification.py
