[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-metadata-extractor"
version = "0.2.0"
description = "This project is designed to classify imaging software repositories and extract relevant information using AI models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Quentin Chappuis", email = "quentin.chappuis@epfl.ch" },
    { name = "Robin Franken", email = "robin.franken@epfl.ch" },
    { name = "Carlos Vivar Rios", email = "carlos.vivarrios@epfl.ch" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi==0.115.13",
    "uvicorn[standard]==0.34.3",
    "gimie==0.7.2",
    "pydantic==2.11.7",
    "python-dotenv==0.21.1",
    "requests==2.32.4",
    "openai==1.91.0",
    "tiktoken==0.9.0",
    "google-genai==0.1.0",
    "repo-to-text==0.7.0",
    "PyLD==2.0.4",
    "rdflib==6.2.0",
    "rdflib-jsonld==0.6.2",
    "PyYAML==6.0.2",
    "selenium",
    "beautifulsoup4",
]

[project.urls]
Homepage = "https://imaging-plaza.epfl.ch"
Repository = "https://github.com/Imaging-Plaza/git-metadata-extractor"
Issues = "https://github.com/Imaging-Plaza/git-metadata-extractor/issues"

[project.scripts]
# This assumes your CLI entry point is a function named 'main' in src/main.py
llm-finder = "src.main:main"